--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RodrigoRocS/Generico#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "16.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
